@@ -1,5 +1,5 @@
 plugins {
-	 id "java"
+	id "java"
 }
 repositories {
 	mavenCentral()
@@ -8,6 +8,7 @@ dependencies {
 	testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.1"
 	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.1"
 	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	compile fileTree(dir: "../DefaultPlugins/build/libs", include: ["*.jar"])
 }
 compileJava {
 	options.fork = true
@@ -47,3 +48,40 @@ assemble.dependsOn(test)
 clean {
 	delete "src/main/resources/data"
 }
+
+task runTestsuite1(type:JavaExec) {
+	main = "org.jel.game.testsuite.Testsuite1"
+	classpath = sourceSets.main.runtimeClasspath
+	classpath += sourceSets.test.runtimeClasspath
+	allJvmArgs = ["--enable-preview"]
+}
+task runTestsuite2(type:JavaExec) {
+	main = "org.jel.game.testsuite.Testsuite2"
+	classpath = sourceSets.main.runtimeClasspath
+	classpath += sourceSets.test.runtimeClasspath
+	allJvmArgs = ["--enable-preview"]
+}
+task runTestsuite3(type:JavaExec) {
+	main = "org.jel.game.testsuite.Testsuite3"
+	classpath = sourceSets.main.runtimeClasspath
+	classpath += sourceSets.test.runtimeClasspath
+	allJvmArgs = ["--enable-preview"]
+}
+task runPerformanceTest(type:JavaExec) {
+	main = "org.jel.game.testsuite.PerformanceTest"
+	classpath = sourceSets.main.runtimeClasspath
+	classpath += sourceSets.test.runtimeClasspath
+	allJvmArgs = ["--enable-preview"]
+}
+task runTestsuites {
+	doLast {
+		println("Finished tests");
+	}
+}
+runTestsuite2.mustRunAfter(runTestsuite1)
+runTestsuite3.mustRunAfter(runTestsuite2)
+runPerformanceTest.mustRunAfter(runTestsuite3)
+runTestsuites.dependsOn(runTestsuite1)
+runTestsuites.dependsOn(runTestsuite2)
+runTestsuites.dependsOn(runTestsuite3)
+runTestsuites.dependsOn(runPerformanceTest)
